--- a/Index.html
+++ b/Index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Hello there, Anatoly!</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>I'm hosted with GitHub Pages, very cool.</p>
 </body>
 </html>
