Updated several of the HTML Pages

--- a/1Favorite.html
+++ b/1Favorite.html
@@ -33,13 +33,13 @@ window.onclick = function(event) {
 </div> 
 </header>
 <nav>
-	<a href="aboutMe.html">Resume</a> &nbsp;
+	<a href="aboutMe.html">About</a> &nbsp;
 	<div class="dropdown">
-  <button onclick="myFunction()" class="dropbtn">About Me↓</button>
+  <button onclick="myFunction()" class="dropbtn">Shop↓</button>
   <div id="myDropdown" class="dropdown-content">
-    <a href="favorite.html">My Story</a>
-	<a href="favorite.html">Music</a>
-    <a href="favorite.html">Favorite Things</a>
+    <a href="shop.html">Computers</a>
+    <a href="shop.html">Phones</a>
+    <a href="shop.html">Tablets</a>
   </div>
 </div>
 	<a href="deals.html">Exclusive Deals</a> &nbsp;
@@ -55,18 +55,24 @@ window.onclick = function(event) {
 <input type="hidden" name="search" value="1"> 
 </form> 
 <br>
-<img src="IT-cyber-technology-e1452587441891.jpg" alt="Tech Background" class="center" width="800" height="400">
+<img src="pexels-photo-373543.jpeg" alt="Tech Background" class="center" width="800" height="400">
 	<br>
-	<h2>Customer Support</h2>
-	
-	<p>You can reach us at any of the following phone numbers or email addresses:<br><br>
-	
-	(317)123-4567<br>(317)345-6789<br>(317)412-1246<br><br>SomethingSomething@meh.edu<br>dfgjrsjjfldsf@gmail.com<br>fwfjlsjflsadjf@yahoo.com<br></p>
+	 <figure>
+		<img src="notebook-303161_960_720.png" alt="Laptop" style="width:200px;height:175px;">
+		<figcaption>Laptops</figcaption>
+	  </figure>
+	  <figure>
+		<img src="essential-phone-100724322-large.jpg" alt="Phone" style="width:200px;height:175px;">
+		<figcaption>Phones</figcaption>
+	  </figure>
+	  <figure>
+		<img src="special-needs-touchscreen-254-p.jpg" alt="Face" style="width:200px;height:175px;">
+		<figcaption>Tablets</figcaption>
+	  </figure>
 	<br><br>
-	<hr>
 	<div id="contact"><p>Toly Technology<br>12345 Main Street<br>Indianapolis, IN 46202 <br><br>+1(317)123-4567</p></div>
 <footer>
-	Copyright &copy; 2020 Anatoly
+	Copyright &copy; 2018 Anatoly Morozov
 </footer>
 </main>
 </body>
