--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>My Testing Website!</title>
+<title>Anatoly's Github Website</title>
 <meta charset="utf-8">
-<link rel="stylesheet" href="tolytech.css">
+<link rel="stylesheet" href="AnatolyGithub.css">
 </head>
 <body>
 <script>
@@ -27,19 +27,20 @@ window.onclick = function(event) {
 </script>
 <header>
 	<div class="header">
-		<h1><a href="index.html">Toly Technology</a></h1>
+		<h1><a href="index.html">Hello!</a></h1>
+		<h2>Welcome to my Github Home Page!<h2>
 		<p>+1 (317) 123-4567</p>
 	</div>
 </div> 
 </header>
 <nav>
-	<a href="about.html">About</a> &nbsp;
+	<a href="aboutMe.html">Resume</a> &nbsp;
 	<div class="dropdown">
-  <button onclick="myFunction()" class="dropbtn">Shop↓</button>
+  <button onclick="myFunction()" class="dropbtn">About Me↓</button>
   <div id="myDropdown" class="dropdown-content">
-    <a href="shop.html">Computers</a>
-    <a href="shop.html">Phones</a>
-    <a href="shop.html">Tablets</a>
+    <a href="favorite.html">My Story</a>
+	<a href="favorite.html">Music</a>
+    <a href="favorite.html">Favorite Things</a>
   </div>
 </div>
 	<a href="deals.html">Exclusive Deals</a> &nbsp;
@@ -72,7 +73,7 @@ window.onclick = function(event) {
 	<br><br>
 	<div id="contact"><p>Toly Technology<br>12345 Main Street<br>Indianapolis, IN 46202 <br><br>+1(317)123-4567</p></div>
 <footer>
-	Copyright &copy; 2018 Anatoly Morozov
+	Copyright &copy; 2020 Anatoly
 </footer>
 </main>
 </body>
